--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -19,7 +19,7 @@ jobs:
           python-version: "3.10"
 
       - name: Install dependencies
-        working-directory: ../../api
+        working-directory: ./api
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
